@@ -1,10 +1,16 @@
 <!DOCTYPE suite SYSTEM "http://beust.com/testng/testng-1.0.dtd" >
   
-<suite name="SingleSuite" verbose="10" parallel="methods">
+<suite name="SingleSuite" verbose="10" parallel="methods" >
 
+<!-- 
+  <listeners>
+    <listener class-name="test.tmp.AnnotationTransformer" />
+  </listeners>
+ -->
+ 
   <test enabled="true" name="SingleTest">
     <classes>
-      <class name="test.asserttests.AssertTest" />
+      <class name="test.annotationtransformer.AnnotationTransformerTest" />
 <!--
       <class name="test.jar.JarTest" />
       <class name="test.testng185.FirstDerived"/>
